@@ -12,6 +12,7 @@ Ability to refresh directories from within the navigator
 New option to clone repositories without updating remote to bitbucket
 New right-click context menu option to update repositories from remote (origin/master for now)
 New Report Bug Link added to footer
+Deleting a file or project will now also delete a corresponding scheduled job from the queue.
 Errors cloning repositories are sent to the front-end now.
 Error handling for most git commands now.  Notifications visible in webide for failures.
 Creating files and folders will automatically open them in the editor and navigator.
